assets/main.css
:root {
  --aomori-primary-color-hex: #333333;
  --aomori-secondary-color-hex: #888888;
  --aomori-meta-color-hex: #b6b6b6;
  --aomori-text-color-hex: #555555;
  --aomori-opac-mask-rgb: 0, 0, 0;
  --aomori-light-hex: #fff;
  --aomori-padding-md: 100px;
  --aomori-padding-sm: 2em;

  --en-sans: "Ubuntu";
  --sys-sans: -apple-system, BlinkMacSystemFont, Segoe UI,"Helvetica Neue", Arial;
  --cjk-sans: "PingFang SC", "Hiragino Sans GB", "Droid Sans Fallback", "Microsoft YaHei";
}
body {
  padding: 0;
  margin: 0;
  font: 400 16px/1.15 var(--en-sans), var(--cjk-sans), var(--sys-sans), sans-serif;
  scroll-behavior: smooth;
}
a {
  text-decoration: none;
  color: currentColor;
}

/* Tablet */
.snap-container {
  scroll-snap-type: mandatory;
  scroll-snap-points-y: repeat(100vh);
  scroll-snap-type: y mandatory;
  scroll-padding: 0 0 100vh;
  overflow-y: scroll;
  height: 100vh;
}
.section {
  scroll-snap-align: start;
  scroll-snap-stop: always;
  height: 100vh;
}
.landing,
.extra,
.main {
  padding: var(--aomori-padding-md);
  box-sizing: border-box;
}
.landing {
  display: flex;
  flex-flow: column-reverse nowrap;
  position: relative;
}
.side-subject {
  margin-bottom: 4em;
}
.landing .side-subject {
  margin-bottom: 0;
}
.extra .side-subject {
  position: static;
}
.side-subject a {
  color: var(--aomori-primary-color-hex);
}
.side-subject a:hover,
.side-subject a:active {
  color: var(--primary-color-hex);
}
.side-subject ul {
  list-style: none;
  padding: 0;
  margin: 0;
}
.avatar {
  object-fit: cover;
  border-radius: 50%;
}
.side-subject .avatar {
  width: 120px;
  height: 120px;
}
.subject-name {
  font-weight: 700;
  font-size: 3.75em;
  line-height: 1.37;
  margin: 1.625rem 0;
}
.subject-description {
  font-weight: 400;
  font-size: 1.25em;
  line-height: 1.35;
  margin: 0;
}
.extra .subject-info {
  display: none;
}
.site-links {
  flex-grow: 1;
  text-align: right;
  display: flex;
  flex-flow: column nowrap;
  margin-bottom: 1.25rem;
}
.site-links > * + * {
  margin-top: 1.25rem;
}
.site-links ul {
  list-style: none;
  padding: 0;
  margin: 0;
}
.site-links a {
  transition: color 0.2s linear;
}
.site-nav {
  flex-grow: 1;
}
.site-nav a {
  display: block;
  color: var(--aomori-primary-color-hex);
}
.site-nav a:hover,
.site-nav a:active {
  color: var(--primary-color-hex);
}
.site-nav a:active::before,
.site-nav a:hover::before {
  content: "\2023";
  display: inline;
  margin-right: 0.5em;
}
.site-nav li + li {
  margin-top: min(45px, 4vh);
}
.site-links > div:not(.site-nav) {
  color: var(--primary-color-hex);
}
.site-links > div:not(.site-nav) a:hover,
.site-link > div:not(.site-nav) a:active,
.js-subscribe:hover,
.js-subscribe:active {
  color: var(--aomori-primary-color-hex);
}
.site-podcast ul {
  display: flex;
}
.site-podcast li + li,
.site-social a + a {
  margin-left: 1.5em;
}
.js-subscribe {
  border: 1px solid currentColor;
  background-color: transparent;
  color: currentColor;
  padding: 0.5em 1em;
  border-radius: 3px;
  cursor: pointer;
}
.scroll-indicator {
  position: absolute;
  bottom: 10px;
  left: 50%;
  transform: translateX(-50%);
  width: 16px;
  fill: var(--aomori-meta-color-hex);
  user-select: none;
}
#scroller {
  animation: slide 1s ease-in forwards 5;
}
.featured {
  width: 100vw;
  position: relative;
}
.featured-inner {
  overflow-x: scroll;
  overflow-y: hidden;
  scroll-behavior: smooth;
  scroll-snap-type: mandatory;
  scroll-snap-points-y: repeat(100vw);
  scroll-snap-type: x mandatory;
  width: inherit;
  height: inherit;
}
.featured-slider {
  display: flex;
  flex-flow: row nowrap;
  width: inherit;
  height: inherit;
}
.featured-nav {
  position: absolute;
  left: 5%;
  right: 5%;
  transform: translateY(-50%);
  top: 50%;
  display: flex;
  justify-content: space-between;
  align-items: center;
}
.featured-nav button {
  width: 3rem;
  height: 3rem;
  border: 0;
  border-radius: 50%;
  background-color: rgba(var(--aomori-opac-mask-rgb), 0.3);
  color: var(--aomori-light-hex);
  cursor: pointer;
  transition: background-color 0.2s linear;
  visibility: visible;
  opacity: 1;
  display: flex;
  justify-content: center;
  align-items: center;
}
.featured-nav button:hover,
.featured-nav button:active {
  background-color: rgba(var(--aomori-opac-mask-rgb), 0.8);
}
.hero-wrap {
  scroll-snap-align: start;
  scroll-snap-stop: always;
  width: inherit;
  height: inherit;
  flex-shrink: 0;
}
.hero {
  display: flex;
  flex-flow: column nowrap;
  max-width: 1280px;
  padding: var(--aomori-padding-md);
  box-sizing: border-box;
  margin: 0 auto;
  width: inherit;
  height: inherit;
}
.hero a,
.hero a:visited {
  transition: color .2s linear;
}
.hero a:active,
.hero a:hover {
  color: var(----primary-color-hex);
}
.hero.horizontal {
  padding-bottom: clamp(36px, 4vh, 56px);
}
.hero-cover {
  display: block;
  background: center / cover #eeeeee no-repeat;
  flex-shrink: 0;
  width: 100%;
  height: 0;
  padding-bottom: 60vh;
}
.hero-info {
  margin: 2rem 0 0;
  flex: 1 1 auto;
  display: flex;
  flex-flow: column nowrap;
}
.hero-tags a {
  font-size: .96em;
  color: var(--aomori-meta-color-hex);
  margin-right: .5rem;
}
.hero-tags a:before {
  content: "#";
  color: rgba(var(--aomori-opac-mask-rgb), 0.1);
  margin-right: 1px;
  font-weight: 900;
}
.hero-headline {
  flex: 1 1 auto;
}
.hero-headline h2 {
  margin: 1rem 0;
  font-size: 3em;
  line-height: 1.15;
  font-weight: 700;
  text-transform: uppercase;
  color: var(--aomori-primary-color-hex);
  padding: 2rem 0;
  border-top: 1rem solid currentColor;
}
.has-cover .hero-headline h2 {
  font-size: clamp(1.5em, 48 / 1280 * 100vw, 3em);
  padding: 0;
  border: 0;
}
.hero-headline a {
  display: inline-block;
}
.hero-headline h3 {
  font-size: 1.5em;
  font-weight: 400;
  color: var(--aomori-secondary-color-hex);
}
.has-cover .hero-headline h3 {
  font-size: 1.25em;
  color: var(--aomori-primary-color-hex);
}
.hero-meta {
  color: var(--aomori-meta-color-hex);
  overflow: auto;
  font-size: 1rem;
}
.hero-meta::before,
.hero-meta::after {
  content: "";
  display: block;
  clear: both;
}
.hero-authors {
  float: left;
}
.hero-time {
  float: right;
}
.section.extra {
  position: relative;
  height: auto;
}
.side-mark {
  font-weight: 700;
  text-transform: uppercase;
  font-size: 1em;
  position: absolute;
  right: var(--aomori-padding-sm);
  top: var(--aomori-padding-sm);
  margin: 0;
}
.landing .side-mark {
  display: none;
}
.side-mark a {
  display: inline-flex;
  align-items: center;
}
.side-mark .avatar {
  width: 24px;
  height: 24px;
  margin-right: 0.25em;
}
.subject-list_inner {
  padding-bottom: 3.75em;
}
.subject-list ul {
  list-style: none;
  padding: 0;
  max-width: 680px;
  margin: 0 auto 0 0;
}
.subject-item {
  display: flex;
  flex-flow: row nowrap;
}
.subject-item + .subject-item {
  margin-top: 3.75em;
}
.subject-item_cover {
  width: 100px;
  height: 100px;
  object-fit: cover;
  margin-right: 1.5em;
}
.subject-item_main {
  display: flex;
  flex-flow: column nowrap;
  overflow: hidden;
}
.subject-item_title {
  font-size: 1.5em;
  font-weight: 700;
  text-transform: uppercase;
  margin: 0 0 0.375em;
  color: var(--aomori-primary-color-hex);
}
.subject-item_subtitle {
  font-size: 1em;
  margin: 0 0 0.5625em;
  font-weight: 400;
  flex-grow: 1;
  line-height: 1.35;
}
.subject-item_time {
  font-size: 0.875em;
  color: var(--aomori-meta-color-hex);
}
.subject-list_nav {
  padding: 1em 0;
}
.subject-list_nav i {
  font-size: 10px;
  margin: 0 0.5rem;
}
.subject-list_nav::before,
.subject-list_nav::after {
  content: "";
  display: block;
  clear: both;
}
.nav_prev {
  float: left;
}
.nav_next {
  float: right;
}
/* PC */
@media (min-width: 768px) {
  .landing {
    flex-flow: row nowrap;
  }
  .site-nav {
    display: flex;
    align-items: center;
    justify-content: flex-end;
  }
  .side-mark {
    position: static;
    right: auto;
    top: auto;
    font-size: 1.5em;
  }
  .main .side-mark {
    position: fixed;
    left: var(--aomori-padding-md);
    top: var(--aomori-padding-md);
  }
  .side-subject {
    flex: 0 0 40%;
    margin-bottom: 0;
    margin-right: 2em;
    align-self: flex-end;
  }
  .extra .side-subject {
    position: sticky;
    left: 0;
    bottom: var(--aomori-padding-md);
  }
  .subject-list {
    flex-grow: 1;
  }
  .site-links {
    margin-bottom: 0;
  }
  .hero-cover + .hero-info .hero-headline__inner {
    display: flex;
  }
  .hero.horizontal .hero-headline__inner {
    flex-flow: row nowrap;
    justify-content: space-between;
    align-items: center;
  }
  .hero.horizontal h2 {
    flex: 1 0 40%;
    max-height: calc(40vh - clamp(36px, 4vh, 56px) - 100px - 2rem - 1.15rem - 2rem - 0.96 * 1.15rem);
    overflow: hidden;
  }
  .hero.horizontal h3 {
    flex: 1 1 50%;
    text-align: right;
  }
  .hero.vertical {
    flex-direction: row;
    justify-content: space-between;
  }
  .hero.vertical .hero-cover {
    flex-basis: 40%;
    width: auto;
    height: auto;
    padding: 0;
  }
  .hero.vertical .hero-info {
    margin: 0;
    flex: 0 0 55%;
  }
  .hero.vertical .hero-headline {
    display:flex;
    flex-grow: 1;
  }
  .hero.vertical .hero-headline__inner {
    flex-flow: column nowrap;
  }
  .hero.vertical h2 {
    flex: 1 1 auto;
  }
  .hero.vertical h3 {
    flex: 0 0 auto;
    max-width: max(300px, 30vw);
  }
  .hero.vertical .hero-meta {
    margin: 40px 0 0;
  }
  .extra {
    display: flex;
    flex-flow: row nowrap;
    align-items: stretch;
    justify-content: space-between;
  }
  .main {
    display: flex;
  }
  .main .side-subject {
    position: sticky;
    bottom: var(--aomori-padding-md);
    left: var(--aomori-padding-md);
  }
}

/* Mobile */
@media (max-width: 628px) {
  .landing,
  .extra,
  .main {
    padding: var(--aomori-padding-md) var(--aomori-padding-sm) var(--aomori-padding-sm);
  }
  .landing .side-subject {
    margin-bottom: 1em;
  }
  .side-subject > .avatar {
    width: 60px;
    height: 60px;
  }
  .subject-name {
    font-size: 2em;
    margin: 1rem 0 0.5rem;
  }
  .subject-description {
    font-size: 1em;
  }
  .hero {
    padding: 0;
  }
  .hero-info {
    margin: 10vh 2rem;
  }
  .has-cover .hero-info {
    margin: 1rem 2rem;
  }
  .hero-headline h2 {
    margin: 1rem 0;
  }
  .hero-headline h3 {
    font-size: 1.25em;
  }
  .has-cover .hero-headline h3 {
    font-size: 1em;
  }
  .subject-item + .subject-item {
    margin-top: 2em;
  }
  .subject-item_title {
    font-size: 1.2em;
    margin-bottom: 0.6em;
  }
}

@keyframes slide {
  0% {
    transform: translateY(0);
  }
  100% {
    transform: translateY(40%);
  }
}

